--- a/vinicius/index.html
+++ b/vinicius/index.html
@@ -10,7 +10,7 @@
         <li>Docker</li>
         <li>Ansible</li>
         <li>Integração Continua: Maturidade e Desenvolvimento</li>
-        <li>HTML</li>
+        <li>Kubernetes: Introdução a orquestração de containers</li>
     </ul>
 </body>
 </html>
